# mps_shape_completion

bsaund_shape_completion/scripts/: data_publisher.py  publish_npy_occupancy_stamped.py
mps_shape_completion/: .gitignore  shape_complete.py  shape_completion_node.py
mps_shape_completion/docker/: Dockerfile
mps_shape_completion_visualization/: CMakeLists.txt
mps_shape_completion_visualization/src/: voxel_display.cpp  voxel_display.h  voxel_visual.cpp  voxel_visual.h
shape_completion_training/: .gitignore  CMakeLists.txt  package.xml  setup.py
shape_completion_training/hparams/: autoencoder.json  gan.json
shape_completion_training/params/: autoencoder.json
shape_completion_training/scripts/: model_runner.py  mytrain.py
shape_completion_training/src/shape_completion_training/: augment_shapenet.py  dataset_wip.py  metric.py  model_runner.py  my_keras_model.py  mykerasmodel.py  preprocess_shapenet.py  train.py  wip.py
shape_completion_training/src/shape_completion_training/model/: augmented_ae.py  auto_encoder.py  conditional_vcnn.py  data_tools.py  default_params.json  filepath_tools.py  model_runner.py  network.py  nn_tools.py  vae.py  voxelcnn.py  voxelcnn_old.py
shape_completion_training/src/shape_completion_training/tests/: test_metric.py  test_model_runner.py
shape_completion_training/tests/: test_voxelcnn.py
